--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 body {
   margin: 0;
-  background-image: url("public/bg.jpeg");
+  background-image: url("/bg.jpeg");
   background-size: cover;
   z-index: 0;
   background-repeat: no-repeat;
